<resources>
    <string name="app_name">Multiplication Master</string>

    <!--Fragments-->
    <string name="title_settings">Configuración</string>
    <string name="title_train">¡A entrenar!</string>
    <string name="title_statistics">Estadísticas</string>

    <!--Selección de avatar-->
    <string name="textView_selectAvatar">Selecciona tu personaje favorito</string>
    <string name="img_avatar_description">Imagen sobre el avatar para tu perfil.</string>
    <string name="textView_avatarTrain">¿Podrás conseguir el avatar completo?</string>
    <string name="itachi_avatar">Itachi</string>
    <string name="sasuke_avatar">Sasuke</string>
    <string name="hinata_avatar">Hinata</string>
    <string name="kakashi_avatar">Kakashi</string>
    <string name="naruto_avatar">Naruto</string>

    <!--Selección de tabla-->
    <string name="textView_selectTable">¿Qué tabla quieres praticar?</string>

    <!--Diálogo de dificultad-->
    <string name="button_selectDifficulty">Seleccionar dificultad</string>
    <string name="choose_difficulty">Elige la dificultad de nivel</string>
    <string name="easy_difficulty">Fácil - (Orden ascendente)</string>
    <string name="normal_difficulty">Medio - (Orden descendente)</string>
    <string name="hard_difficulty">Difícil - (Orden aleatorio)</string>
    <string name="exit_dialog">Volver</string>

    <!--Edit text Fecha-->
    <string name="select_dateLbl">Selecciona la fecha de hoy</string>
    <string name="select_date">¿Qué dia es hoy?</string>

    <!--Statistics-->
    <string name="txv_avatarsObtained">Poderes conseguidos</string>
    <string name="txv_selectedDate">Selecciona una fecha en la configuración</string>
    <string name="mistakes">Errores cometidos</string>
    <string name="message_noMistakes">¡FELICIDADES!</string>
    <string name="success">% Aciertos</string>
    <string name="edt_sendMail">Introduce un e-mail</string>
    <string name="btn_sendMail">Enviar</string>
</resources>