<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_settings">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.multiplicationmaster.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_train"
        android:name="com.example.multiplicationmaster.ui.train.TrainFragment"
        android:label="@string/title_train"
        tools:layout="@layout/fragment_train" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.multiplicationmaster.ui.stadistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>