<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".ui.stadistics.StatisticsFragment">

    <TextView
        android:id="@+id/txv_avatarsObtained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txv_avatarsObtained"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_hinnata"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/hinnata_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_avatarsObtained" />

    <ImageView
        android:id="@+id/img_Itachi"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:src="@drawable/itachi_9"
        app:layout_constraintEnd_toStartOf="@+id/img_kakashi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_hinnata"
        app:layout_constraintTop_toBottomOf="@+id/txv_avatarsObtained" />

    <ImageView
        android:id="@+id/img_kakashi"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/kakashi_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_avatarsObtained" />

    <ImageView
        android:id="@+id/img_naruto"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/naruto_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Itachi" />

    <ImageView
        android:id="@+id/img_sasuke"
        android:layout_width="77dp"
        android:layout_height="94dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="112dp"
        android:src="@drawable/sasuke_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Itachi" />

    <TextView
        android:id="@+id/txv_dateSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sasuke" />

    <Spinner
        android:id="@+id/spinner_tables"
        android:layout_width="271dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_dateSelected" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_mistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        app:columnCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_mistakes"
        app:rowCount="5">

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/txv_mistakes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/mistakes"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_tables" />

    <ProgressBar
        android:id="@+id/pgb_percentageSuccess"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/circle_progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_tables" />

    <TextView
        android:id="@+id/txv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pgb_percentageSuccess"
        app:layout_constraintEnd_toEndOf="@+id/pgb_percentageSuccess"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/pgb_percentageSuccess"
        app:layout_constraintTop_toTopOf="@+id/pgb_percentageSuccess"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/txv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/success"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_tables" />

    <TextView
        android:id="@+id/txv_hinnataName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/hinata_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_hinnata" />

    <TextView
        android:id="@+id/txv_itachiname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/itachi_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txv_hinnataName"
        app:layout_constraintTop_toBottomOf="@+id/img_Itachi" />

    <TextView
        android:id="@+id/txv_kakashiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/kakashi_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txv_itachiname"
        app:layout_constraintTop_toBottomOf="@+id/img_kakashi" />

    <TextView
        android:id="@+id/txv_narutoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/naruto_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_naruto" />

    <TextView
        android:id="@+id/txv_sasukeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="124dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sasuke_avatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sasuke" />

    <Button
        android:id="@+id/btn_sendMail"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="68dp"
        android:text="@string/btn_sendMail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/edt_sendMail"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>