<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/txv_selectAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textView_selectAvatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/spinner_avatar"
        android:layout_width="364dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="1dp"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txv_selectTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textView_selectTable"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/btn_selectDifficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_selectTable"
        app:layout_constraintVertical_bias="0.409"
        app:rowCount="4">

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btn_selectDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:onClick="onClickDifficulty"
        android:text="@string/button_selectDifficulty"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_selectTable" />

    <EditText
        android:id="@+id/edt_fecha"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="76dp"
        android:autoLink="none"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:inputType="datetime|date"
        android:onClick="onClickDate"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_selectDifficulty"
        app:layout_constraintVertical_bias="0.423" />

</androidx.constraintlayout.widget.ConstraintLayout>